Fixed pipeline for Azure web app deployment.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,15 +28,9 @@ steps:
 - task: AzureRmWebAppDeployment@4
   displayName: 'Azure Web App Deployment'
   inputs:
-    appType: webApp
+    appType: webAppLinux
     azureSubscription: 'ServiceConnection-MSDN'
     webAppName: 'example-storagequeue'
     package: $(Build.ArtifactStagingDirectory)/**/*.zip
     enableCustomDeployment: true
     removeAdditionalFilesFlag: true
-# - task: AzureWebApp@1
-#   displayName: "Azure Web App Deployment"
-#   inputs:
-#     azureSubscription: 'ServiceConnection-MSDN'
-#     appName: 'example-storagequeue'
-#     package: $(Build.ArtifactStagingDirectory)
