Fixed web job publishing.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     command: publish
     projects: '**/StorageQueueProcessorV2.csproj'
     publishWebProjects: false
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)\App_Data\Jobs\Triggered\StorageQueueProcessorV2'
     zipAfterPublish: True
 # - publish: $(Build.ArtifactStagingDirectory)
 #   displayName: "Publish artifact to Azure Pipelines"
@@ -36,3 +36,4 @@ steps:
     package: $(Build.ArtifactStagingDirectory)/**/*.zip
     enableCustomDeployment: true
     removeAdditionalFilesFlag: true
+    excludeFilesFromAppDataFlag: true
