Fixed web job publishing.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     projects: '**/StorageQueueProcessorV2.csproj'
     publishWebProjects: false
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)\App_Data\Jobs\Triggered\StorageQueueProcessorV2'
-    zipAfterPublish: True
+    zipAfterPublish: false
 # - publish: $(Build.ArtifactStagingDirectory)
 #   displayName: "Publish artifact to Azure Pipelines"
 #   artifact: 'StorageQueueProcessorV2'
