Fixed web job publishing.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
     appType: webApp
     azureSubscription: $(azureSubscription)
     webAppName: $(webAppName)
-    package: $(Build.ArtifactStagingDirectory)
+    package: $(Build.ArtifactStagingDirectory)\StorageQueueProcessorV2
     enableCustomDeployment: true
     deploymentMethod: 'runFromPackage'
     removeAdditionalFilesFlag: true
