Fixed pipeline for web job.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,4 @@ steps:
     enableCustomDeployment: true
     deploymentType: 'webDeploy'
     removeAdditionalFilesFlag: true
-    excludeFilesFromAppDataFlag: true
+    excludeFilesFromAppDataFlag: false
